# handwritting_analysis

./: .gitignore  README.md  handwrittingSetup_ghiamp.xml  pyproject.toml
.claude/commands/: debug.md  documentar.md  mejorar.md  planificar.md
analysis/: analisis_piloto.py  bids_transforming_fullsession.py  ghiamp_montage.sfp  ica_apply.py  ica_results_template.json
docsAndRefs/: links.txt
scripts/analysis/: analisis_piloto.py  epocas_escritura.py  epocas_escritura_ejecutada.py  epocas_escritura_imaginada.py  erp_analysis.py
scripts/bids/: bids_transforming.py
scripts/ica/: ica_concatenating.py  ica_corrmap.py  ica_preprocessing.py  ica_single_run.py  prompt_ica.txt  readme.md
src/analysis/: pdf_report.py
src/handwriting_analysis/: __init__.py
src/handwriting_analysis/ica/: __init__.py  ica_apply.py
